<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <packaging>pom</packaging>

    <groupId>com.tcmj.pug</groupId>
    <artifactId>tcmj-pug-enums</artifactId>
    <version>1.3.2</version>

    <name>tcmj-pug-enums</name>
    <description>
        _ __ _ _ __ _ ___ _ __ _ _ _ __ ___ ___
        | '_ \| | | |/ _` | / _ \ '_ \| | | | '_ ` _ \/ __|
        | |_) | |_| | (_| | | __/ | | | |_| | | | | | \__ \
        | .__/ \__,_|\__, | \___|_| |_|\__,_|_| |_| |_|___/
        | | __/ |
        |_| |___/

        Toolkit to load data from different sources in order to create java enum classes.
        Contains all elements to create them on the fly.
        All modules were separated by an official API.
        There are already several implementations ready to use.
        Choose:
        a DataProvider to load your data e.g. from an URL or Json file
        a ClassBuilder to construct your enum in java source code
        a SourceCodeFormatter and NamingStrategy to adjust the final look
        a EnumExporter to write your enum to a file or compile it directly onto a classloader
        To further simplify this process you can use a Fluent builder pattern which directs you step by step
        And do not hesitate to make use of our maven plugin


    </description>

    <inceptionYear>2017</inceptionYear>
    <url>https://github.com/tcmj/tcmj-pug-enums</url>
    <developers>
        <developer>
            <id>tcmj</id>
            <name>Thomas Deutsch</name>
            <email>tomdeu@gmail.com</email>
            <roles>
                <role>owner</role>
                <role>developer</role>
            </roles>
            <timezone>Europe/Berlin</timezone>
        </developer>
    </developers>
    <properties>
        <java.version>1.8</java.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.source>${java.version}</maven.compiler.source>
        <maven.compiler.target>${java.version}</maven.compiler.target>
        <java.source.level.version>${java.version}</java.source.level.version>
        
        <bintray.repo>tcmj-pug-enums</bintray.repo>
        <bintray.package>tcmj-pug-enums</bintray.package>
        
        <org.slf4j.version>1.7.25</org.slf4j.version>
        <ch.qos.logback.version>1.2.3</ch.qos.logback.version>
        
    </properties>
    <prerequisites>
        <maven>3.3.1</maven>
    </prerequisites>
    <issueManagement>
        <system>GitHub</system>
        <url>https://github.com/tcmj/tcmj-pug-enums/issues/</url>
    </issueManagement>
    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-jar-plugin</artifactId>
                    <version>3.0.2</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-source-plugin</artifactId>
                    <version>3.0.1</version>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>
    <distributionManagement>
        <repository>
            <id>bintray-tcmj-tcmj-pug-enums</id>
            <name>tcmj-tcmj-pug-enums</name>
            <url>https://api.bintray.com/maven/tcmj/${bintray.repo}/${bintray.package}/;publish=1</url>
        </repository>
    </distributionManagement>
        
    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>com.tcmj.pug</groupId>
                <artifactId>pug-enum-api</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.tcmj.pug</groupId>
                <artifactId>pug-enum-builder</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.tcmj.pug</groupId>
                <artifactId>pug-enum-exporter</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.tcmj.pug</groupId>
                <artifactId>pug-enum-datasources</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.tcmj.pug</groupId>
                <artifactId>pug-enum-generator</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>org.slf4j</groupId>
                <artifactId>slf4j-api</artifactId>
                <version>${org.slf4j.version}</version>
            </dependency>
            <dependency>
                <groupId>org.apache.commons</groupId>
                <artifactId>commons-lang3</artifactId>
                <version>3.5</version>
            </dependency>
            <dependency>
                <!-- Optional dependency if you want javapoet as enum builder. -->
                <groupId>com.squareup</groupId>
                <artifactId>javapoet</artifactId>
                <version>1.8.0</version>
            </dependency>
            <dependency>
                <!-- Optional dependency if you want codemodel as enum class builder.
                     https://mvnrepository.com/artifact/com.sun.codemodel/codemodel   -->
                <groupId>com.sun.codemodel</groupId>
                <artifactId>codemodel</artifactId>
                <version>2.6</version>
            </dependency>
            <dependency>
                <!-- Optional dependency if you want to use url datasources -->
                <groupId>org.jsoup</groupId>
                <artifactId>jsoup</artifactId>
                <version>1.10.2</version>
            </dependency>
            <dependency>
                <!-- Optional dependency if you want to use google as formatting framework -->
                <groupId>com.google.googlejavaformat</groupId>
                <artifactId>google-java-format</artifactId>
                <version>1.3</version>
            </dependency>
            <dependency>
                <groupId>ch.qos.logback</groupId>
                <artifactId>logback-core</artifactId>
                <version>${ch.qos.logback.version}</version>
            </dependency>
            <dependency>
                <groupId>ch.qos.logback</groupId>
                <artifactId>logback-classic</artifactId>
                <version>${ch.qos.logback.version}</version>
            </dependency>
            <dependency>
                <groupId>com.google.guava</groupId>
                <artifactId>guava</artifactId>
                <version>21.0</version>
            </dependency>
            <dependency>
                <groupId>junit</groupId>
                <artifactId>junit</artifactId>
                <version>4.12</version>
            </dependency>
        </dependencies>
    </dependencyManagement>
    <modules>
        <module>api</module>
        <module>builder</module>
        <module>datasources</module>
        <module>exporter</module>
        <module>maven-plugin</module>
        <module>examples-api</module>
    </modules>
</project>
